Project/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-standalone-1.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-quickcheck-core-0.9.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-migrationsupport-5.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-platform-runner-1.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-params-5.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-platform-testkit-1.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-api-5.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-1.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-engine-5.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-platform-suite-api-1.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-vintage-engine-5.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-platform-reporting-1.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-5.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-platform-engine-1.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-platform-launcher-1.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/junit-platform-commons-1.5.2.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/hamcrest-library-1.3.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/1j/v41fvz892k94fg8ymbmjz11m0000gn/T/AppTranslocation/31F914D7-0B52-4CFD-9CC7-79C99ACEEFF2/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/amirhusain/Desktop/University/Software Engineering with Java/Project
-d
/Users/amirhusain/Desktop/University/Software Engineering with Java/Project/doc
-encoding
UTF-8
-charset
UTF-8
/Users/amirhusain/Desktop/University/Software Engineering with Java/Project/OrderTest.java
<---- end of javadoc command ---->
Loading source file /Users/amirhusain/Desktop/University/Software Engineering with Java/Project/OrderTest.java...
Constructing Javadoc information...
/Users/amirhusain/Desktop/University/Software Engineering with Java/Project/Order.java:73: error: ';' expected
                    total_discount += 1-item.getPrice()*unit
                                                            ^
1 error
